@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST sequel-2.6.0.gem 246784 RMD160 9e9ecd4ee79d90e1738934d8c325c17bb9be5e1f SHA1 ff1c8733afdd7ea41cf6f959ebcc1502367e9a4c SHA256 002f5bf2b3e7e22369d85f173a205577faa65b1bb224f4631e049090c3c7970d
+DIST sequel-3.30.0.gem 824320 RMD160 269d07c6a521b7e184c2a059f28bdfc91b81c536 SHA1 98817f7b74d3d90d28c538b922f2cc2f5ad0f8a5 SHA256 8c5a417ad87c7311e5b304ee6b1477a448915d9a2124ace96d38471828189deb
 EBUILD sequel-2.6.0.ebuild 358 RMD160 0687c909729f5fa4e9cfc23fb65f3232aa5bc17d SHA1 5b0aa5fa3e19984cede2d4c00ab978b45df882ee SHA256 52cb54d2fe0923787c624f6c43fb66cb8193c702359af657710d6b080212639d
-MISC ChangeLog 477 RMD160 b7fa0b117d07786a1d55e76444a54db9ffa9ded2 SHA1 c8dd3610988ab41e3d62bcca5eca3dd85b8230bf SHA256 4f8dace6a489730744ac4958874488b5acd73677f217a00f0f600359e98d8ecc
+EBUILD sequel-3.30.0.ebuild 458 RMD160 3e4705aedf5617d9335082503a759b5bde8ebf59 SHA1 25d7a76c485bd5befba59a7e25228303e831bb0f SHA256 75b15731b91f52a1b415f9774bea3e6ed6c8767e7c6379fc60abce8891f1f5b3
+MISC ChangeLog 622 RMD160 cfdd41e566823e76045bc1ef1ed4994528ba278f SHA1 060aa550e3a6827029541b486a3c84beb0a9789f SHA256 a5a00da8f3d0c03437f5b0f7013eb318988fded2787ad50fb62a1de0d6a907ba
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk74OYcACgkQiIP6VqMIqNe2egD8ChwJwC9u1wV+ak0NZf5ABubj
-W8g/L21cBIvg8Va4EtYA/2qvbUV3fePBJhv5gAio+pTwP7xjPsCEStwY9NFDQeE0
-=ouPr
+iF4EAREIAAYFAk74PEkACgkQiIP6VqMIqNdb6QD9FbQWezvFv7t9jDWTyfyqoASN
+vY3zaCKn3W40AeDBRDUA/0WZjAHSp5T+XSuIKRYDoq20J8HXYgdK74mT668ggIir
+=sQOX
 -----END PGP SIGNATURE-----
