@@ -1,0 +1,23 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=4
+
+USE_RUBY="ruby18 ruby19 ree18"
+
+RUBY_FAKEGEM_TASK_TEST="spec"
+
+RUBY_FAKEGEM_EXTRADOC="CHANGELOG README.rdoc"
+
+inherit ruby-fakegem
+
+DESCRIPTION="A lightweight database toolkit for Ruby"
+HOMEPAGE="http://sequel.rubyforge.org"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE="test"
+
+ruby_add_bdepend "test? ( dev-ruby/rspec )"
