@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sequel-3.30.0 (26 Dec 2011)
+
+  26 Dec 2011; Hans de Graaff <graaff@gentoo.org> +sequel-3.30.0.ebuild:
+  Version bump. Convert to ruby-fakegem.
+
   26 Dec 2011; Hans de Graaff <graaff@gentoo.org> -sequel-2.5.0.ebuild:
   Remove old version.
 
